[build-system]
requires = ["scikit-build-core>=0.3.3", "pybind11>=2.10.0"]
build-backend = "scikit_build_core.build"

[project]
name = "mcpy"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.scikit-build]
cmake.build-type = "Release"
wheel.packages = ["mcpy"]
